--- a/public/css/policycloud-marketplace-public-accounts.css
+++ b/public/css/policycloud-marketplace-public-accounts.css
@@ -684,6 +684,21 @@
 #policycloud-marketplace-account
   section.policycloud-marketplace-account-profile
   #policycloud-marketplace-account-edit
+  img {
+  max-width: 200px;
+  border-radius: 8px;
+}
+
+#policycloud-marketplace-account
+  section.policycloud-marketplace-account-profile
+  #policycloud-marketplace-account-edit
+  input[type="file"] {
+  font-size: 125%;
+}
+
+#policycloud-marketplace-account
+  section.policycloud-marketplace-account-profile
+  #policycloud-marketplace-account-edit
   button {
   font-weight: bold;
   background-color: #000000;
@@ -691,9 +706,9 @@
   border-radius: 10px;
   padding: 5px 10px;
   text-decoration: none;
-  font-size: 80% !important;
+  text-align: left;
   border: none;
-  margin: 15px auto;
+  margin: 15px 0;
   transition: all 0.2s ease-in-out;
 }
 
