--- a/public/css/policycloud-marketplace-public-descriptions.css
+++ b/public/css/policycloud-marketplace-public-descriptions.css
@@ -666,6 +666,20 @@
   > .item {
   margin-right: 15px;
   margin-bottom: 10px;
+  position: relative;
+  transition: transform 0.2s ease-in-out;
+}
+
+.policycloud-marketplace.description
+  > .content
+  > .information
+  > .gallery
+  > .slider
+  > .item:hover {
+  /* Display & Box Model */
+  cursor: pointer;
+  transform: scale(0.98);
+  transition: transform 0.2s ease-in-out;
 }
 
 .policycloud-marketplace.description
@@ -681,7 +695,7 @@
   > .gallery
   > .slider
   > .item
-  > video {
+  > .video-thumbnail {
   /* Display & Box Model */
   height: 200px;
   object-fit: cover;
@@ -695,35 +709,14 @@
   > .gallery
   > .slider
   > .item
-  > img:hover,
-.policycloud-marketplace.description
-  > .content
-  > .information
-  > .gallery
-  > .slider
-  > .item
-  > video:hover {
-  /* Display & Box Model */
-  cursor: pointer;
-  transform: scale(0.98);
-  transition: transform 0.2s ease-in-out;
-}
-
-.policycloud-marketplace.description
-  > .content
-  > .information
-  > .gallery
-  > .slider
-  > .item
-  > img:active,
-.policycloud-marketplace.description
-  > .content
-  > .information
-  > .gallery
-  > .slider
-  > .item
-  > video:active {
-  pointer-events: none;
+  > .play-icon {
+  position: absolute;
+  display: block;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 50px;
+  width: 50px;
 }
 
 .policycloud-marketplace.description
@@ -748,6 +741,7 @@
 
 .policycloud-marketplace.modal.gallery .content {
   overflow: hidden;
+  min-width: 400px;
 }
 
 .policycloud-marketplace.modal.gallery .content > div {
@@ -755,6 +749,16 @@
   flex-direction: column;
   align-items: center;
   background-color: black;
+}
+
+/**
+* Quick fixes for image positioning.
+*/
+.policycloud-marketplace.modal.gallery .content img {
+  max-height: 90.2vh;
+  object-fit: contain;
+  vertical-align: middle !important;
+  width: auto;
 }
 
 .policycloud-marketplace.modal.gallery .content video.large {
@@ -772,6 +776,22 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  position: absolute;
+  bottom: 0;
+  opacity: 0;
+  transition: all 0.4 ease-in-out;
+}
+
+.policycloud-marketplace.modal.gallery
+  *[data-asset-category="videos"]
+  .toolbar {
+  top: 0;
+  bottom: unset;
+}
+
+.policycloud-marketplace.modal.gallery .content:hover .toolbar {
+  opacity: 0.8;
+  transition: all 0.4 ease-in-out;
 }
 
 .policycloud-marketplace.modal.gallery .toolbar .tools {
@@ -872,12 +892,12 @@
 * Asset editing form
 */
 
-.policycloud-marketplace.description.editor {
+.policycloud-marketplace.description.editor.modalize {
   margin: 20px 0;
   padding: 20px;
 }
 
-.policycloud-marketplace.description.editor {
+.policycloud-marketplace.description.editor.modalize {
   background-color: var(--policycloud-background-color);
 }
 
