--- a/public/css/policycloud-marketplace-public.css
+++ b/public/css/policycloud-marketplace-public.css
@@ -92,8 +92,8 @@
   transition: all 0.1s ease-in-out;
 }
 
-.policycloud-marketplace button.action.loading {
-  opacity: 0.7;
+.policycloud-marketplace .loading {
+  opacity: 0.6;
   cursor: wait;
   pointer-events: none;
 }
@@ -288,7 +288,6 @@
 
 .policycloud-marketplace form label {
   display: block;
-  float: left;
   font-weight: 500;
   margin: 10px 0 5px 0;
   padding: 0;
@@ -425,7 +424,7 @@
 /**
 * The modal's dark backdrop.
 */
-.policycloud-marketplace.modal::before {
+.policycloud-marketplace.modal .backdrop {
   /* Positioning */
   position: absolute;
   z-index: 550;
@@ -439,6 +438,7 @@
   /* Other */
   background-color: rgba(0, 0, 0, 0.5);
   content: " ";
+  cursor: pointer;
 }
 
 /**
@@ -565,16 +565,7 @@
   background-color: var(--policycloud-background-color);
   border-radius: 12px;
   perspective: 1px;
-}
-
-/**
-* Quick fixes for image positioning.
-*/
-.policycloud-marketplace.modal > .container img,
-.policycloud-marketplace.modal > .container > .content > img {
-  vertical-align: middle !important;
-  max-height: 90vh;
-  width: auto;
+  position: relative;
 }
 
 /** 
