--- a/public/css/policycloud-marketplace-public-descriptions.css
+++ b/public/css/policycloud-marketplace-public-descriptions.css
@@ -201,10 +201,22 @@
   width: 100%;
 }
 
+.policycloud-marketplace.featured-descriptions .white-container {
+  background-color: #ffffff;
+  width: 100vw;
+  position: absolute;
+  left: 0;
+  padding: 30px 0 40px 0;
+}
+
+.policycloud-marketplace.featured-descriptions .white-container + * {
+  padding-top: 200px;
+}
+
 .policycloud-marketplace.featured-descriptions .statistics {
   display: flex;
   justify-content: space-evenly;
-  width: 60%;
+  width: 70%;
   margin: 0 auto;
 }
 
@@ -222,6 +234,12 @@
 .policycloud-marketplace.featured-descriptions .statistics figcaption {
   opacity: 0.7;
   font-size: 40%;
+}
+
+@media screen and (max-width: 700px) {
+  .policycloud-marketplace.featured-descriptions .white-container + * {
+    padding-top: 300px;
+  }
 }
 
 /*
