work on features

--- a/public/css/policycloud-marketplace-public-descriptions.css
+++ b/public/css/policycloud-marketplace-public-descriptions.css
@@ -655,6 +655,17 @@
   margin-bottom: 20px;
 }
 
+.policycloud-marketplace.description > .content > .information ul {
+  padding: 0;
+  margin: 10px 0;
+  display: flex;
+  list-style-type: none;
+}
+
+.policycloud-marketplace.description > .content > .information ul a {
+  margin-right: 10px;
+}
+
 .policycloud-marketplace.description
   > .content
   > .information
@@ -939,6 +950,79 @@
   display: flex;
   align-items: center;
   font-size: 16px;
+}
+
+.policycloud-marketplace.description.editor .links div div {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.policycloud-marketplace.description.editor
+  .links
+  div
+  div
+  input[name="links-title[]"] {
+  max-width: 200px;
+}
+.policycloud-marketplace.description.editor
+  .links
+  div
+  div
+  input[name="links-url[]"] {
+  min-width: 225px;
+}
+
+.policycloud-marketplace.description.editor .links div div * {
+  display: block;
+  height: auto;
+  max-height: unset;
+  margin: 0 8px 0 0;
+}
+
+.policycloud-marketplace.description.editor .links div button.remove-field,
+.policycloud-marketplace.description.editor .links div button.remove-field * {
+  padding: 0;
+  margin: 0 0 0 3px;
+  border: none;
+  box-sizing: border-box;
+  background: none !important;
+  color: var(--policycloud-text-color) !important;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.policycloud-marketplace.description.editor
+  .links
+  div
+  button.remove-field:hover {
+  opacity: 0.8;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.policycloud-marketplace.description.editor
+  .links
+  div
+  button.remove-field:disabled {
+  opacity: 0.4;
+  cursor: not-allowed;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.policycloud-marketplace.description.editor .links > button.add-field {
+  padding: 3px 5px;
+  display: block;
+  height: auto;
+  line-height: normal;
+  background: none !important;
+  color: var(--policycloud-text-color);
+  font-size: 75%;
+  margin: 10px 0;
+  padding: 0;
+  border: none;
+}
+
+.policycloud-marketplace.description.editor .links > button.add-field:hover {
+  cursor: pointer;
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 650px) {
