sso final fixes

--- a/public/css/policycloud-marketplace-public-accounts.css
+++ b/public/css/policycloud-marketplace-public-accounts.css
@@ -30,8 +30,14 @@
   width: auto;
 }
 
-#google-signin {
+#google-signin,
+#google-registration {
   display: inline-block;
+}
+
+#google-signin iframe,
+#google-registration iframe {
+  margin: 0 !important;
 }
 
 button#keycloak-registration,
