--- a/public/css/policycloud-marketplace-public-descriptions.css
+++ b/public/css/policycloud-marketplace-public-descriptions.css
@@ -185,7 +185,7 @@
 
 .policycloud-marketplace.featured-descriptions .descriptions-grid > ul {
   justify-content: center !important;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   padding: 0;
 }
 
