--- a/public/css/policycloud-marketplace-public-accounts.css
+++ b/public/css/policycloud-marketplace-public-accounts.css
@@ -274,6 +274,7 @@ button#keycloak-signin::before {
 #policycloud-marketplace-account-content section h3 {
   font-weight: bold;
   font-size: 110% !important;
+  margin-bottom: 0;
 }
 
 #policycloud-marketplace-account-content section header .actions {
