major refactoring part 1

--- a/public/css/policyms-public.css
+++ b/public/css/policyms-public.css
@@ -7,6 +7,10 @@
 *
 */
 
+/**
+ * TODO @alexandrosraikos: Implement CSS updates (#134)
+ */
+
 :root {
   --policyms-text-color: #111111;
   --policyms-text-color-secondary: #464646;
